add `publishConfig` key on packages

--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "git+https://github.com/vic1707/devconfig.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "prettier": ">=2.7.0"
   }
