--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "git+https://github.com/vic1707/devconfig.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@darraghor/eslint-plugin-nestjs-typed": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
