--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "git+https://github.com/vic1707/devconfig.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "base.json",
     "nestjs-vite.json",
