--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "git+https://github.com/vic1707/devconfig.git"
   },
   "scripts": {
-    "format": "prettier --write \"**/*.{ts,tsx,md,mdx,scss,css,json,yml}\"",
+    "format": "prettier \"**/*.{ts,tsx,md,mdx,scss,css,json,yml}\" -c",
+    "format:fix": "prettier --write \"**/*.{ts,tsx,md,mdx,scss,css,json,yml}\" -c",
     "publish": "changeset publish",
     "upgrade-packages": "yarn upgrade-interactive"
   },
