--- a/packages/stylelint/.stylelintrc.json
+++ b/packages/stylelint/.stylelintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
+  "$schema": "http://json.schemastore.org/stylelintrc.json",
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"]
 }
