fix dependencies stylelint

--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/stylelint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": ".stylelintrc.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -11,14 +11,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "stylelint": "^14.14.1",
+  "dependencies": {
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.14.1"
   },
   "peerDependencies": {
     "postcss": "*",
