insensitive case on object keys

--- a/packages/eslint/.eslintrc.json
+++ b/packages/eslint/.eslintrc.json
@@ -26,7 +26,7 @@
     "sort-keys": [
       "error",
       "asc",
-      { "caseSensitive": true, "natural": true, "minKeys": 2, "allowLineSeparatedGroups": true }
+      { "caseSensitive": false, "natural": true, "minKeys": 2, "allowLineSeparatedGroups": true }
     ],
 
     // force shorthand for object properties when possible
