--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,13 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+    assignees:
+      - 'vic1707'
 
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
       # Check for updates to GitHub Actions every weekday
       interval: 'daily'
+    assignees:
+      - 'vic1707'
