--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/eslint-config",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": ".eslintrc.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-astro": "^0.21.1",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
