--- a/packages/eslint/.eslintrc.json
+++ b/packages/eslint/.eslintrc.json
@@ -5,15 +5,13 @@
     "import",
     "prettier",
     "simple-import-sort",
-    "unused-imports",
-    "typescript-sort-keys"
+    "unused-imports"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/strict",
-    "plugin:typescript-sort-keys/recommended"
+    "plugin:@typescript-eslint/strict"
     // add "plugin:prettier/recommended" if bug with arrow functions occures and remove "prettier/prettier": "error" as it would be a duplicate
   ],
   "env": {
@@ -76,6 +74,7 @@
       }
     ],
     "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/member-ordering": ["error", "asc", {"caseSensitive": true, "natural": true, "minKeys": 2, "allowLineSeparatedGroups": true}],
 
     //
     // eslint-plugin-import
