--- a/packages/eslint/.eslintrc.json
+++ b/packages/eslint/.eslintrc.json
@@ -74,7 +74,7 @@
       }
     ],
     "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/member-ordering": ["error", "asc", {"caseSensitive": true, "natural": true, "minKeys": 2, "allowLineSeparatedGroups": true}],
+    "@typescript-eslint/member-ordering": ["error", {"caseSensitive": true, "natural": true, "minKeys": 2, "allowLineSeparatedGroups": true}],
 
     //
     // eslint-plugin-import
