remove devdeps since packages are just json

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -11,6 +11,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "typescript": "*"
+  },
   "files": [
     "base.json",
     "nestjs-vite.json",
