--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -27,17 +27,16 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vitest": "^0.0.29"
   },
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "eslint": "^8.32.0",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
-  },
   "peerDependencies": {
     "class-validator": "*",
     "eslint": "*",
     "prettier": "*",
     "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "class-validator": {
+      "optional": true
+    }
   },
   "files": [
     "astro.json",
