--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/stylelint-config",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "main": "scss.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -13,10 +13,8 @@
   },
   "dependencies": {
     "stylelint-config-astro": "^1.0.4",
-    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-config-standard": "^29.0.0"
+    "stylelint-config-sass-guidelines": "^9.0.1"
   },
   "peerDependencies": {
     "postcss": "*",
@@ -33,9 +31,7 @@
     }
   },
   "files": [
-    "css.json",
-    "scss.json",
-    "css-astro.json",
-    "scss-astro.json"
+    "astro.json",
+    "scss.json"
   ]
 }
