update missing deps

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": ">=5.0.0"
   },
   "files": [
     "base.json",
