--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -12,28 +12,28 @@
     "access": "public"
   },
   "dependencies": {
-    "@darraghor/eslint-plugin-nestjs-typed": "^3.22.6",
+    "@darraghor/eslint-plugin-nestjs-typed": "^4.0.16",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-astro": "^0.27.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.2",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-astro": "^0.29.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-solid": "^0.12.1",
+    "eslint-plugin-solid": "^0.13.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vitest": "^0.2.6"
+    "eslint-plugin-vitest": "^0.3.1"
   },
   "peerDependencies": {
     "class-validator": "*",
-    "eslint": "*",
-    "prettier": "*",
-    "typescript": "*"
+    "eslint": ">=8",
+    "prettier": ">=3",
+    "typescript": ">=5"
   },
   "peerDependenciesMeta": {
     "class-validator": {
