--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/stylelint-config",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "main": "scss.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -14,13 +14,13 @@
   "dependencies": {
     "stylelint-config-astro": "^1.0.4",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-sass-guidelines": "^10.0.0"
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "postcss": "^8.4.29",
+    "postcss-html": "^1.5.0"
   },
   "peerDependencies": {
-    "postcss": "*",
-    "postcss-html": "*",
-    "prettier": "*",
-    "stylelint": "*"
+    "prettier": ">=3",
+    "stylelint": ">=15"
   },
   "peerDependenciesMeta": {
     "postcss": {
