--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prettier": "^2.8.8",
     "turbo": "^1.10.7"
   },
-  "packageManager": "yarn@4.0.0-rc.45",
+  "packageManager": "yarn@4.0.2",
   "engines": {
     "node": ">=20.3.0",
     "yarn": ">=4.0.0-rc.35"
