--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/tsconfig",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "main": "base.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -16,6 +16,7 @@
   },
   "files": [
     "base.json",
+    "bun.json",
     "nestjs-vite.json",
     "nestjs.json",
     "react-vite.json",
