--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@changesets/cli": "^2.26.2",
-    "@vic1707/prettier": "*",
-    "prettier": "^3.1.0",
-    "turbo": "^1.10.16"
+    "@changesets/cli": "^2.27.1",
+    "@vic1707/prettier": "latest",
+    "prettier": "^3.1.1",
+    "turbo": "^1.11.3"
   },
   "packageManager": "yarn@4.0.2",
   "engines": {
