--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@vic1707/prettier": "latest",
-    "prettier": "^3.1.1",
-    "turbo": "^1.11.3"
+    "@vic1707/prettier": "^2.0.1",
+    "prettier": "^3.2.5",
+    "turbo": "^1.12.4"
   },
   "packageManager": "yarn@4.0.2",
   "engines": {
