allow empty constructors

--- a/packages/eslint/.eslintrc.json
+++ b/packages/eslint/.eslintrc.json
@@ -39,7 +39,7 @@
         "object-shorthand": ["error", "always"],
         
         "no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
-        "no-empty-function": ["error", { "allow": ["arrowFunctions"] }],
+        "no-empty-function": ["error", { "allow": ["arrowFunctions", "constructors"] }],
 
         //
         // @typescript-eslint
