--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -15,8 +15,10 @@
     "postcss": "^8.4.35",
     "postcss-html": "^1.6.0",
     "stylelint-config-astro": "^1.0.4",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-sass-guidelines": "^11.0.0"
+    "stylelint-config-sass-guidelines": "^11.0.0",
+    "stylelint-config-standard": "^36.0.0"
   },
   "peerDependencies": {
     "prettier": ">=3",
@@ -31,7 +33,9 @@
     }
   },
   "files": [
-    "astro.json",
-    "scss.json"
+    "css.json",
+    "scss.json",
+    "css-astro.json",
+    "scss-astro.json"
   ]
 }
