--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/prettier",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "main": "prettier.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -11,7 +11,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "prettier-plugin-astro": "latest"
+  },
   "peerDependencies": {
-    "prettier": "*"
+    "prettier": "latest"
   }
 }
