--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@vic1707/prettier": "^2.0.1",
+    "@vic1707/prettier": "latest",
     "prettier": "^3.2.5",
     "turbo": "^1.13.0"
   },
