--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "url": "git+https://github.com/vic1707/devconfig.git"
   },
   "scripts": {
-    "format": "prettier --check \"**/*.{js,jsx,ts,tsx,md,mdx,scss,css,json,yml}\" -c",
-    "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,md,mdx,scss,css,json,yml}\"",
+    "format": "prettier -c .",
+    "format:fix": "prettier -w .",
     "publish": "changeset publish",
     "upgrade-packages": "yarn upgrade-interactive"
   },
