--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "prettier": "^3.3.3",
     "turbo": "^2.0.6"
   },
-  "packageManager": "yarn@4.1.1",
+  "packageManager": "yarn@4.3.1",
   "engines": {
-    "node": ">=20.3.0",
-    "yarn": ">=4.0.0-rc.35"
+    "node": ">=22.2.0",
+    "yarn": ">=4.3.1"
   }
 }
