--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Victor LEFEBVRE",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vic1707/devconfig.git"
@@ -8,6 +9,8 @@
   "scripts": {
     "format": "prettier -c .",
     "format:fix": "prettier -w .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "publish": "changeset publish",
     "upgrade-packages": "yarn upgrade-interactive"
   },
@@ -16,6 +19,7 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
+    "eslint": "^9.7.0",
     "prettier": "^3.3.3",
     "turbo": "^2.0.6"
   },
