--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@vic1707/eslint-config",
-  "version": "6.0.2",
-  "main": ".eslintrc.json",
+  "version": "7.0.0",
+  "main": "eslint.js.config.js",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vic1707/devconfig.git"
@@ -12,22 +13,23 @@
     "access": "public"
   },
   "dependencies": {
-    "@darraghor/eslint-plugin-nestjs-typed": "^5.0.3",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@darraghor/eslint-plugin-nestjs-typed": "^5.0.14",
+    "@eslint/js": "^9.7.0",
+    "@types/eslint__js": "^8.42.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^0.32.0",
+    "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-solid": "^0.13.2",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-unused-imports": "^3.1.0",
-    "eslint-plugin-vitest": "^0.3.26"
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-solid": "^0.14.1",
+    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-vitest": "^0.5.4",
+    "typescript-eslint": "^7.16.1"
   },
   "peerDependencies": {
     "class-validator": "*",
@@ -41,11 +43,13 @@
     }
   },
   "files": [
-    "astro.json",
-    "jest.json",
-    "nestjs.json",
-    "react.json",
-    "solidjs.json",
-    "vitest.json"
+    "eslint.js.config.js",
+    "eslint.ts.config.js",
+    "eslint-astro.config.js",
+    "eslint-jest.config.js",
+    "eslint-nestjs.config.js",
+    "eslint-react.config.js",
+    "eslint-solidjs.config.js",
+    "eslint-vitest.config.js"
   ]
 }
