--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/eslint-config",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "main": "eslint.js.config.js",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsdoc": "^48.7.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.4.0",
