--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/eslint-config",
-  "version": "7.0.4",
+  "version": "7.1.0",
   "main": "eslint.js.config.js",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -13,24 +13,24 @@
     "access": "public"
   },
   "dependencies": {
-    "@darraghor/eslint-plugin-nestjs-typed": "^5.0.14",
-    "@eslint/js": "^9.7.0",
+    "@darraghor/eslint-plugin-nestjs-typed": "^5.0.18",
+    "@eslint/js": "^9.9.1",
     "@types/eslint__js": "^8.42.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-jsdoc": "^48.7.0",
+    "eslint-plugin-jest": "^28.8.0",
+    "eslint-plugin-jsdoc": "50.2.2",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.4.0",
-    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-solid": "^0.14.1",
-    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-solid": "^0.14.2",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "eslint-plugin-vitest": "^0.5.4",
-    "typescript-eslint": "^7.16.1"
+    "typescript-eslint": "8.2.0"
   },
   "peerDependencies": {
     "class-validator": "*",
