--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/prettier",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "main": "prettier.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "dependencies": {
-    "prettier-plugin-astro": "^0.14.0"
+    "prettier-plugin-astro": "0.14.1"
   },
   "peerDependencies": {
     "prettier": "*"
