--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vic1707/stylelint-config",
-  "version": "6.0.1",
+  "version": "6.0.2",
   "main": "scss.json",
   "author": "Victor LEFEBVRE",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "dependencies": {
-    "postcss": "^8.4.39",
+    "postcss": "8.4.41",
     "postcss-html": "^1.7.0",
     "stylelint-config-astro": "^1.0.4",
     "stylelint-config-sass-guidelines": "^12.0.0",
