--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "@vic1707/stylelint-config",
-  "version": "6.0.2",
-  "main": "scss.json",
-  "author": "Victor LEFEBVRE",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vic1707/devconfig.git"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "postcss": "8.4.41",
-    "postcss-html": "^1.7.0",
-    "stylelint-config-astro": "^1.0.4",
-    "stylelint-config-sass-guidelines": "^12.0.0",
-    "stylelint-config-standard": "^36.0.1"
-  },
-  "peerDependencies": {
-    "prettier": ">=3",
-    "stylelint": ">=15"
-  },
-  "peerDependenciesMeta": {
-    "postcss": {
-      "optional": true
-    },
-    "postcss-html": {
-      "optional": true
-    }
-  },
-  "files": [
-    "css.json",
-    "scss.json",
-    "css-astro.json",
-    "scss-astro.json"
-  ]
+	"name": "@vic1707/stylelint-config",
+	"version": "6.0.3",
+	"main": "scss.json",
+	"author": "Victor LEFEBVRE",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/vic1707/devconfig.git"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"postcss": "8.4.41",
+		"postcss-html": "1.7.0",
+		"stylelint-config-astro": "1.0.4",
+		"stylelint-config-sass-guidelines": "12.0.0",
+		"stylelint-config-standard": "36.0.1"
+	},
+	"peerDependencies": {
+		"prettier": ">=3",
+		"stylelint": ">=15"
+	},
+	"peerDependenciesMeta": {
+		"postcss": {
+			"optional": true
+		},
+		"postcss-html": {
+			"optional": true
+		}
+	},
+	"files": ["css.json", "scss.json", "css-astro.json", "scss-astro.json"]
 }
